# home-security

./: LICENSE
home-security-camera/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
home-security-camera/main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c
home-security-camera/main/camera/: camera.c  camera.h  camera_pins.h
home-security-camera/main/communications/: network.c  network.h  wifi.c  wifi.h
home-security-camera/main/communications/server/: server.c  server.h
home-security-camera/main/communications/server/handlers/: configuration.c  index.c  network_configuration.c  stream.c
home-security-camera/main/spiffs/: index.html
home-security-camera/main/storage/: nvs_helpers.c  nvs_helpers.h  spiffs.c  spiffs.h  wifi_password.c  wifi_password.h  wifi_ssid.c  wifi_ssid.h
